[refactor] Collectors 대신에 Stream.toList()로 교체